# dare-you-survive

./: .gitignore  CMakeLists.txt  LICENCE  README.md  vcpkg.json
assets/map/: map.tiled-session  map.tmx  map2.tmx  tileset.tsx  wood_tileset.tsx
src/: MapManager.cpp  MapManager.h  MapRenderer.cpp  MapRenderer.h  Player2D.cpp  Player2D.h  Window.cpp  Window.h  main.cpp
